[tool.poetry]
name = "aurornis"
version = "1.4.0"
description = "A command line program test helper"
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
repository = "https://github.com/Deuchnord/Aurornis"
license = "AGPL-3.0-or-later"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coveralls = "^3.3.1"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
